src/main/resources/web/themes/default/basic.css
/* ... */
/* Breadcrumb rules: */
div.breadcrumb {
	margin-top: 0px;
	margin-bottom: 10px;
	font-size: 80%;
	background: whitesmoke;
	padding: 3px 3px 3px 7px;
}

div.breadcrumb ul {
	padding-left: 0px;
	display: inline;
}

div.breadcrumb li {
	display: inline;
}

/* Start resource title section: */
div#titleContainer {
	padding-bottom: 1.4em;
}

div.resource-title {
	background: transparent url(file.png) no-repeat 0px 5px;
	height: 30px;
	padding-top: 8px;
}

/* IE7 Hack */
html>body div.resource-title { *
	height: 1%;
}

div.resource-title h1 {
	max-width: 50%;
	/* To prevent box from extending all the way and cause wrapping */
	padding-right: 5px;
	float: left;
	display: inline;
	font-size: 135%;
	font-weight: bold;
	margin: 0 0 0 30px;
}

div.collection,div.article-listing,div.event-listing {
	background: transparent url(dir.png) no-repeat 0px 5px;
}

div.collection h1,div.article-listing h1,div.event-listing h1 {
	margin: 0 0 0 38px;
}

div.audio {
	background: transparent url(audio.png) no-repeat 0px 5px;
}

div.audio h1 {
	margin: 0 0 0 33px;
}

div.video {
	background: transparent url(video.png) no-repeat 0px 5px;
}

div.video h1 {
	margin: 0 0 0 37px;
}

div.image {
	background: transparent url(image.png) no-repeat 0px 5px;
}

div#titleContainer form {
	background: #ccccff;
	width: 95%;
	margin-top: 7px;
	padding: 15px;
	clear: both;
	float: left;
}

div#titleContainer h3 {
	font-size: 100%;
	padding-bottom: 10px;
}

ul.globalMenu {
	float: left;
	display: inline;
	list-style-type: none;
	margin: 4px 0 0 0;
	padding-left: 0px;
}

ul.globalMenu li {
	display: inline;
	padding-right: 5px;
}

ul.lock {
	padding-top: 5px;
	margin: 0;
	padding-left: 0;
	float: right;
	display: inline;
	list-style-type: none;
}

ul.lock li {
	display: inline;
	font-size: 80%;
	padding-left: 20px;
	background: transparent url(lock.gif) no-repeat 0px 25%;
}

/* End resource title section: */ /*  Start of 'TabMenuLine' section: */
div.activeTab {
	padding: 5px 10px 4px 15px;
}

/* IE6 overflow fix */
* html div.activeTab {
	height: 1% !important;
	overflow: hidden !important;
}

/* TabMenu1 */
ul.tabMenu1 {
	float: left;
}

ul.tabMenu1 li.navigateToParentService {
	background: url(up.gif) no-repeat 1% 50%;
}

ul.tabMenu1 li.navigateToParentService a {
	padding-left: 22px;
}

/* TabMenu2 */
ul.tabMenu2 {
	float: right;
	padding: 2px 0 2px 0px;
}

ul.tabMenu2 li {
	margin-left: 10px;
}

/* Items in tabMenu2 with icons (icons are optional) */
ul.tabMenu2 li.fileUploadService {
	background: transparent url(upload.gif) no-repeat;
}

ul.tabMenu2 li.createDocumentService {
	background: transparent url(nyfil.gif) no-repeat;
	padding-top: 4px; /* Taller icon*/
}

ul.tabMenu2 li.moveResourcesService {
	background: transparent url(move.png) no-repeat 0px 2px;
	padding-top: 4px; /* Taller icon*/
	padding-bottom: 1px;
}

ul.tabMenu2 li.copyResourcesService {
	background: transparent url(copy.png) no-repeat 0px 2px;
	padding-top: 4px; /* Taller icon*/
	padding-bottom: 1px;
}

ul.tabMenu2 li.createCollectionService {
	background: transparent url(nymappe.gif) no-repeat 0px -2px;
}

ul.tabMenu2 li.fileUploadService a,ul.tabMenu2 li.createDocumentService a
	{ /* Move link text 22px right (away from the icon) */
	padding-left: 22px;
}

ul.tabMenu2 li.createCollectionService a {
	/* Move link text 25px right (away from the icon) */
	padding-left: 25px;
}

ul.tabMenu2 li.moveResourcesService a,ul.tabMenu2 li.copyResourcesService a
	{
	padding-left: 27px;
}

/* Form items in tabMenu2 */
div.activeTab form {
	background: #ccccff;
	width: 95%;
	margin-top: 5px;
	margin-bottom: 7px;
	padding: 15px;
	clear: left;
	float: left;
}

* html div.activeTab form {
	margin-top: -9px;
	width: 95% !important;
	height: 1% !important;
	overflow: hidden !important;
}

form div#submitButtons {
	padding-top: 10px;
}

div.activeTab form ul {
	list-style-type: none;
	margin: 0px 0 10px 0;
	padding: 2px;
}

div.activeTab form h3 {
	font-size: 100%;
	padding-bottom: 10px;
}

/* Used to display messages like "This folder contains an index-file etc." */
div.tabMessage {
	font-size: 75%;
	padding: 5px 0 5px 0;
	font-weight: bold;
	float: left;
}

a.tabHelpURL {
	font-size: 75%;
	padding: 5px 0 5px 0;
	float: right;
}

/*  End of 'TabMenuLine' section: */ /* Properties section */
div.resourceInfo {
	padding: 0 0.5em 0.5em 0.5em;
	font-size: 100%;
}

.resourceInfo h2,.resourceInfo h3,.resourceInfo h4 {
	padding-bottom: 0.2em;
	border-bottom: 1px solid #aaa;
}

.resourceInfo h2 {
	font-size: 115%;
}

.resourceInfo h3 {
	font-size: 95%;
	margin-top: 1em;
}

.resourceInfo p {
	font-size: 90%;
	margin-top: 0.4em;
	margin-bottom: 0;
}

.resourceInfo div {
	padding: 0.4em 0 0.3em 0;
	font-size: 90%;
}

.smaller {
	font-size: 80%;
}

.resourceInfo table {
	margin-top: 0.5em;
	font-size: 80%;
	border-collapse: collapse;
	width: 100%;
}

.resourceInfo tr {
	background: #eeeeee;
	border-bottom: solid 1px #ccc;
}

.read {
	padding-top: 1em;
}

.read,.privelegeList {
	padding-top: 0.5em;
}

/* Check if this can be deleted when visual profile editing is in place */
.noMetadata {
	margin-top: 0.35em;
	padding: 0.15em;
	padding-bottom: 0.15em;
	padding-left: 0.5em;
	background: #eeeeee;
	font-size: 80%;
}

/* No support for border-bottom in IE */
* html .resourceInfo tr {
	border-bottom: none;
	padding: 1px;
	background: #eeeeee url(grey.png) repeat-x bottom;
}

.resourceInfo td {
	margin: 1em;
	padding: 0.15em;
	padding-bottom: 0.15em;
	padding-left: 0.5em;
}

.resourceInfo td.key {
	font-weight: bold;
	width: 10%;
	white-space: nowrap;
}

.resourceInfo td.value {
	padding-left: 10px;
	width: 90%;
}

.resourceInfo tr.grey td,.resourceInfo tr.grey td a {
	color: #aaa;
}

.resourceInfo tr.grey td.expandedForm {
	color: #000;
}

/* Editing of properties and permissions */
.expandedForm {
	background: #ccccff;
	width: 100%;
}

div.expandedForm { /* Permissions */
	padding-top: 0px;
}
/* ... */

